# YouTube_Projects_Keel

./: .gitignore  .pre-commit-config.yaml  README.md  out  pyproject.toml
src/juicy_tool_name/: cli.py
src/keel/: __init__.py  cli.py  logger.py  ticker.py
tests/: test_ticker.py
tools/: change_project_name.py
